--- a/arch/arm/boot/dts/tegra114-dalmore.dts
+++ b/arch/arm/boot/dts/tegra114-dalmore.dts
@@ -16,7 +16,7 @@
 			status = "okay";
 
 			vdd-supply = <&vdd_hdmi_reg>;
-			pll-supply = <&palmas_smps3_reg>;
+			pll-supply = <&pll_hdmi_reg>;
 
 			nvidia,ddc-i2c-bus = <&hdmi_ddc>;
 			nvidia,hpd-gpio =
@@ -969,7 +969,7 @@
 						regulator-max-microvolt = <2800000>;
 					};
 
-					ldo3 {
+					avdd_1v2_reg: ldo3 {
 						regulator-name = "avdd-dsi-csi";
 						regulator-min-microvolt = <1200000>;
 						regulator-max-microvolt = <1200000>;
@@ -1012,7 +1012,7 @@
 						regulator-boot-on;
 					};
 
-					ldoln {
+					avdd_hdmi_reg: ldoln {
 						regulator-name = "hvdd-usb";
 						regulator-min-microvolt = <3300000>;
 						regulator-max-microvolt = <3300000>;
@@ -1228,7 +1228,7 @@
 			regulator-max-microvolt = <5000000>;
 			enable-active-high;
 			gpio = <&gpio TEGRA_GPIO(K, 1) GPIO_ACTIVE_HIGH>;
-			vin-supply = <&tps65090_dcdc1_reg>;
+			vin-supply = <&avdd_hdmi_reg>;
 		};
 
 		vdd_cam_1v8_reg: regulator@6 {
@@ -1239,6 +1239,17 @@
 			regulator-max-microvolt = <1800000>;
 			enable-active-high;
 			gpio = <&palmas_gpio 6 0>;
+		};
+
+		pll_hdmi_reg: regulator@7 {
+			compatible = "regulator-fixed";
+			reg = <7>;
+			regulator-name = "vdd_hdmi_pll";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			enable-active-high;
+			gpio = <&gpio TEGRA_GPIO(O, 1) GPIO_ACTIVE_HIGH>;
+			vin-supply = <&avdd_1v2_reg>;
 		};
 	};
 
